# LoadBalancer

./: .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile
backend/src/learning_load_balancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/load_balancer/: __init__.py  bootstrap.py  control_plane.py  demo_backend.py  http_framing.py  metrics.py  observability.py  proxy.py  upstream.py
backend/tests/: test_dashboard.py  test_demo_backend.py  test_proxy.py  test_routing.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  formatters.ts  main.tsx  styles.css  types.ts
frontend/src/components/: BackendTable.test.tsx  BackendTable.tsx  RecentRequests.test.tsx  RecentRequests.tsx  SummaryCards.test.tsx  SummaryCards.tsx
frontend/src/hooks/: useDashboard.test.ts  useDashboard.ts
frontend/tests/: App.test.tsx  api.test.ts
frontend/tests/components/: BackendTable.test.tsx  RecentRequests.test.tsx  SummaryCards.test.tsx
frontend/tests/hooks/: useDashboard.test.ts
scripts/: docker-smoke.sh
src/learning_load_balancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/load_balancer/: app.py  bootstrap.py  cli.py  config.py  dashboard.py  demo_backend.py  health.py  lifecycle.py  metrics.py  observability.py  proxy.py  response.py  routing.py  server.py  validation.py
tests/: test_app.py  test_config.py  test_health.py  test_proxy.py  test_routing.py
