[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-load-balancer"
version = "0.1.0"
description = "A load balancer built to learn production-minded engineering"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "prometheus-client>=0.25,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.9",
]

[project.scripts]
load-balancer = "load_balancer.app:main"
demo-backend = "load_balancer.demo_backend:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
